add create post screen

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-amplify": "^2.2.2",
     "aws-amplify-react-native": "^3.2.0",
     "expo": "~36.0.0",
+    "expo-image-picker": "~8.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
