--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -29,5 +29,11 @@
 			"service": "S3",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"analytics": {
+		"justapp": {
+			"service": "Pinpoint",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
